<resources>
    <string name="app_name">DetroitLabsChallenge</string>
    <string name="bottom_nav_now">Now</string>
    <string name="bottom_nav_places">Places</string>
    <string name="bottom_nav_settings">Settings</string>

    <!-- No Internet View -->
    <string name="device_offline">You\'re offline</string>
    <string name="try_again">Want to try again?</string>
    <string name="disconnected">Disconnected</string>

    <!-- Current Weather Fragment -->
    <string name="celsius">%1$d℃</string>
    <string name="percent">%1$s%%</string>
    <string name="kph">%1$skph</string>
    <string name="wind">Wind</string>
    <string name="rain">Rain</string>

    <!-- Geocoding -->
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
</resources>
