<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="@string/bottom_nav_now"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_schedules"
        android:enabled="true"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/bottom_nav_places"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_music"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/bottom_nav_settings"
        app:showAsAction="ifRoom" />
</menu>