<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/no_internet_imageview_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/disconnected"
        android:src="@drawable/ic_cloud_off_black_24dp"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/no_internet_textview_offline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/no_internet_textview_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_offline"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/no_internet_textview_try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_internet_imageview_icon" />

    <TextView
        android:id="@+id/no_internet_textview_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/try_again"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_internet_textview_offline" />

</android.support.constraint.ConstraintLayout>